infra/registry/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-production-cluster-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: registry.agogi.dev
    http:
      paths:
        # Docker Registry API
        - path: /v2
          pathType: Prefix
          backend:
            service:
              name: docker-registry
              port:
                number: 5000
        # UI
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registry-ui
              port:
                number: 80
  tls:
  - hosts:
    - registry.agogi.dev
    secretName: registry-ui-tls
